--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@ select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/
     <div id="resultBody"></div>
   </div>
   <button class="btn-reset" id="resetBtn" style="display:none" onclick="resetApp()">↩ 다시 보기</button>
-  <div class="footer">주모여기사주요 🍶 · AI 사주풀이 · 재미로만 보슈~</div>
+  <div class="footer">주모여기사주요 🍶 · 사주풀이 · 재미로만 보슈~</div>
 </div>
 <script>
 let gender='남';
