--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@ select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/
 .badge.strong{background:rgba(192,57,43,.15);border-color:var(--red);color:var(--red);font-weight:700}
 .oh-bar{margin-bottom:16px;padding-bottom:16px;border-bottom:1px dashed rgba(107,58,31,.3)}
 .oh-row{display:flex;align-items:center;gap:8px;margin-bottom:6px;font-family:"Gowun Dodum",sans-serif;font-size:12px;color:var(--wood)}
-.oh-lbl{width:24px;text-align:center;font-weight:700}
+.oh-lbl{width:60px;font-size:11px;font-weight:700}
 .oh-track{flex:1;height:10px;background:rgba(255,255,255,.3);border-radius:5px;overflow:hidden}
 .oh-fill{height:100%;border-radius:5px}
 .section{margin-bottom:18px;padding-bottom:18px;border-bottom:1px dashed rgba(107,58,31,.3)}
