--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,17 @@ body{background:#1a0a00;background-image:repeating-linear-gradient(0deg,transpar
 .lantern:nth-child(2){animation-delay:-1s}.lantern:nth-child(3){animation-delay:-2s}.lantern:nth-child(4){animation-delay:-.5s}.lantern:nth-child(5){animation-delay:-1.5s}
 @keyframes swing{0%,100%{transform:rotate(-5deg)}50%{transform:rotate(5deg)}}
 .ls{width:1px;height:30px;background:#8b6914}.lb{width:22px;height:36px;background:radial-gradient(ellipse at 40% 40%,#ff6b35,#c0392b 60%,#8b1a0a);border-radius:50% 50% 50% 50%/40% 40% 60% 60%;box-shadow:0 0 15px rgba(255,100,50,.8);position:relative}.lg{position:absolute;inset:-8px;background:radial-gradient(circle,rgba(255,150,50,.4),transparent 70%);border-radius:50%}.lt{width:1px;height:12px;background:#b8860b}
-.wrap{max-width:480px;margin:0 auto;padding:80px 16px 40px}
-.paper{background:var(--paper);background-image:radial-gradient(ellipse at 20% 20%,#f0dba8,transparent 50%),radial-gradient(ellipse at 80% 80%,#e8cfa0,transparent 50%),repeating-linear-gradient(transparent,transparent 27px,rgba(180,140,80,.25) 27px,rgba(180,140,80,.25) 28px);border:2px solid var(--wood);border-radius:4px;padding:24px 20px;margin-bottom:20px;box-shadow:0 4px 20px rgba(0,0,0,.4)}
+.wrap{max-width:640px;margin:0 auto;padding:80px 24px 40px}
+.paper{background:var(--paper);background-image:radial-gradient(ellipse at 20% 20%,#f0dba8,transparent 50%),radial-gradient(ellipse at 80% 80%,#e8cfa0,transparent 50%),repeating-linear-gradient(transparent,transparent 27px,rgba(180,140,80,.25) 27px,rgba(180,140,80,.25) 28px);border:2px solid var(--wood);border-radius:4px;padding:28px 28px;margin-bottom:20px;box-shadow:0 4px 20px rgba(0,0,0,.4)}
 .header-card{background:var(--paper);background-image:radial-gradient(ellipse at 20% 20%,#f0dba8,transparent 50%),radial-gradient(ellipse at 80% 80%,#e8cfa0,transparent 50%);border:3px solid var(--wood);border-radius:4px;padding:24px 20px;text-align:center;position:relative;margin-bottom:20px;box-shadow:0 4px 20px rgba(0,0,0,.5)}
 .header-card::before{content:"❧";position:absolute;top:8px;left:10px;color:var(--red);font-size:16px}
 .header-card::after{content:"❧";position:absolute;top:8px;right:10px;color:var(--red);font-size:16px;transform:scaleX(-1);display:inline-block}
 .jomo-img{margin:10px 0 6px;animation:bobble 2s ease-in-out infinite;display:inline-block}
-.jomo-img img{width:90px;height:90px;object-fit:contain;border-radius:50%;border:3px solid var(--wood);background:#fff9f0}
+.jomo-img img{width:110px;height:110px;object-fit:contain;border-radius:50%;border:3px solid var(--wood);background:#fff9f0}
 @keyframes bobble{0%,100%{transform:translateY(0)}50%{transform:translateY(-5px)}}
-.app-title{font-size:28px;font-weight:800;color:var(--red);letter-spacing:-.5px;text-shadow:1px 1px 0 rgba(0,0,0,.15)}
+.app-title{font-size:32px;font-weight:800;color:var(--red);letter-spacing:-.5px;text-shadow:1px 1px 0 rgba(0,0,0,.15)}
 .app-sub{font-family:"Gowun Dodum",sans-serif;font-size:12px;color:var(--smoke);margin-top:6px;letter-spacing:1px}
-.bubble{background:#fff9f0;border:2px solid var(--wood);border-radius:12px;padding:14px 16px;margin-bottom:20px;position:relative;font-family:"Gowun Dodum",sans-serif;font-size:14px;color:#3a1a00;line-height:1.7;box-shadow:2px 2px 8px rgba(0,0,0,.3)}
+.bubble{background:#fff9f0;border:2px solid var(--wood);border-radius:12px;padding:16px 20px;margin-bottom:20px;position:relative;font-family:"Gowun Dodum",sans-serif;font-size:15px;color:#3a1a00;line-height:1.8;box-shadow:2px 2px 8px rgba(0,0,0,.3)}
 .bubble::before{content:"";position:absolute;top:-10px;left:30px;width:0;height:0;border-left:8px solid transparent;border-right:8px solid transparent;border-bottom:10px solid var(--wood)}
 .bubble::after{content:"";position:absolute;top:-7px;left:32px;width:0;height:0;border-left:6px solid transparent;border-right:6px solid transparent;border-bottom:8px solid #fff9f0}
 .cursor{display:inline-block;width:2px;height:14px;background:var(--red);margin-left:2px;animation:blink .8s step-end infinite;vertical-align:middle}
@@ -34,12 +34,12 @@ body{background:#1a0a00;background-image:repeating-linear-gradient(0deg,transpar
 .field{margin-bottom:18px}
 .label{display:block;font-size:13px;font-weight:700;color:var(--wood);margin-bottom:6px;letter-spacing:1px}
 .row{display:flex;gap:8px}
-input,select{background:rgba(255,255,255,.65);border:1.5px solid var(--smoke);border-radius:4px;padding:10px 12px;font-family:"Gowun Dodum",sans-serif;font-size:15px;color:var(--ink);outline:none;width:100%;-webkit-appearance:none;appearance:none}
+input,select{background:rgba(255,255,255,.65);border:1.5px solid var(--smoke);border-radius:4px;padding:12px 14px;font-family:"Gowun Dodum",sans-serif;font-size:16px;color:var(--ink);outline:none;width:100%;-webkit-appearance:none;appearance:none}
 input:focus,select:focus{border-color:var(--red);box-shadow:0 0 0 3px rgba(192,57,43,.15)}
 select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='8'%3E%3Cpath d='M1 1l5 5 5-5' stroke='%236b3a1f' stroke-width='2' fill='none' stroke-linecap='round'/%3E%3C/svg%3E");background-repeat:no-repeat;background-position:right 10px center;background-color:rgba(255,255,255,.65);padding-right:28px}
 .gbtn{flex:1;padding:10px;background:rgba(255,255,255,.5);border:1.5px solid var(--smoke);border-radius:4px;font-family:"Gowun Dodum",sans-serif;font-size:14px;color:var(--smoke);cursor:pointer;text-align:center;transition:all .2s;user-select:none}
 .gbtn.on{background:var(--red);border-color:var(--red);color:#fff;font-weight:700}
-.btn-main{width:100%;padding:16px;background:linear-gradient(180deg,#c0392b,#962d22);border:none;border-radius:4px;color:#f5e6c8;font-family:"Nanum Myeongjo",serif;font-size:18px;font-weight:800;letter-spacing:3px;cursor:pointer;transition:all .2s;box-shadow:0 4px 12px rgba(0,0,0,.4)}
+.btn-main{width:100%;padding:18px;background:linear-gradient(180deg,#c0392b,#962d22);border:none;border-radius:4px;color:#f5e6c8;font-family:"Nanum Myeongjo",serif;font-size:20px;font-weight:800;letter-spacing:3px;cursor:pointer;transition:all .2s;box-shadow:0 4px 12px rgba(0,0,0,.4)}
 .btn-main:hover{background:linear-gradient(180deg,#d44235,#a83228);transform:translateY(-1px)}
 .btn-reset{width:100%;padding:12px;background:transparent;border:2px solid var(--paper);border-radius:4px;color:var(--paper);font-family:"Gowun Dodum",sans-serif;font-size:14px;cursor:pointer;margin-bottom:20px}
 .btn-reset:hover{background:rgba(245,230,200,.1)}
@@ -54,8 +54,8 @@ select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/
 .saju-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:6px;margin-bottom:16px}
 .sc{background:rgba(255,255,255,.5);border:1.5px solid var(--smoke);border-radius:4px;padding:8px 4px;text-align:center}
 .sc-lbl{font-size:10px;color:var(--smoke);font-family:"Gowun Dodum",sans-serif;margin-bottom:4px}
-.sc-sky{font-size:22px;font-weight:700;color:var(--ink);line-height:1}
-.sc-earth{font-size:22px;font-weight:700;color:var(--red);line-height:1;margin-top:4px}
+.sc-sky{font-size:26px;font-weight:700;color:var(--ink);line-height:1}
+.sc-earth{font-size:26px;font-weight:700;color:var(--red);line-height:1;margin-top:4px}
 .sc-sub{font-size:9px;color:var(--smoke);font-family:"Gowun Dodum",sans-serif;margin-top:2px}
 .info-row{display:flex;flex-wrap:wrap;gap:8px;margin-bottom:16px;padding-bottom:16px;border-bottom:1px dashed rgba(107,58,31,.3)}
 .badge{background:rgba(255,255,255,.5);border:1px solid var(--smoke);border-radius:12px;padding:4px 10px;font-family:"Gowun Dodum",sans-serif;font-size:12px;color:var(--wood)}
@@ -67,8 +67,8 @@ select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/
 .oh-fill{height:100%;border-radius:5px}
 .section{margin-bottom:18px;padding-bottom:18px;border-bottom:1px dashed rgba(107,58,31,.3)}
 .section:last-child{border-bottom:none;margin-bottom:0;padding-bottom:0}
-.sec-title{font-size:15px;font-weight:700;color:var(--red);margin-bottom:10px}
-.sec-body{font-family:"Gowun Dodum",sans-serif;font-size:14px;color:#3a1a00;line-height:2}
+.sec-title{font-size:17px;font-weight:700;color:var(--red);margin-bottom:12px}
+.sec-body{font-family:"Gowun Dodum",sans-serif;font-size:15px;color:#3a1a00;line-height:2}
 .footer{text-align:center;color:rgba(245,230,200,.3);font-family:"Gowun Dodum",sans-serif;font-size:11px;padding-bottom:20px}
 .yundal-row{display:none;margin-top:8px}
 .yundal-row.show{display:flex}
@@ -341,8 +341,12 @@ function renderResult(saju, reading, name) {
     return t.replace(/#{1,6}\s*/g,"").replace(/\*\*/g,"").replace(/[\u25A0-\u25FF\u2600-\u26FF\u2700-\u27BF]/g,"").trim();
   }
   function cleanBody(t) {
-    // ## ** 마크다운 제거, 도형 이모지(🔷🔶◆◇■□▶ 등) 제거
-    return t.replace(/#{1,6}\s*/g,"").replace(/\*\*/g,"").replace(/\*/g,"").replace(/[\u25A0-\u25FF\u2666\u2665\u2663\u2660]/g,"").trim();
+    // ## ** 마크다운 제거, 도형 이모지 제거, 한자(CJK) 제거
+    return t.replace(/#{1,6}\s*/g,"")
+            .replace(/\*\*/g,"").replace(/\*/g,"")
+            .replace(/[\u25A0-\u25FF\u2666\u2665\u2663\u2660]/g,"")
+            .replace(/[\u4E00-\u9FFF\u3400-\u4DBF]/g,"")
+            .trim();
   }
   if (sections.length >= 2) {
     sections.forEach(function(s) {
