--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@ select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/
 .section{margin-bottom:18px;padding-bottom:18px;border-bottom:1px dashed rgba(107,58,31,.3)}
 .section:last-child{border-bottom:none;margin-bottom:0;padding-bottom:0}
 .sec-title{font-size:17px;font-weight:700;color:var(--red);margin-bottom:12px}
+.sec-oneliner{font-family:"Nanum Myeongjo",serif;font-size:15px;font-weight:700;color:var(--wood);background:rgba(107,58,31,.08);border-left:3px solid var(--red);padding:8px 12px;margin-bottom:12px;border-radius:0 4px 4px 0;line-height:1.5}
 .sec-body{font-family:"Gowun Dodum",sans-serif;font-size:16px;color:#3a1a00;line-height:2.1}
 .footer{text-align:center;color:rgba(245,230,200,.3);font-family:"Gowun Dodum",sans-serif;font-size:11px;padding-bottom:20px}
 .yundal-row{display:none;margin-top:8px}
@@ -354,7 +355,18 @@ function renderResult(saju, reading, name) {
   }
   if (sections.length >= 2) {
     sections.forEach(function(s) {
-      var bodyHtml = s.body.map(function(line){ return cleanBody(escHtml(line)); }).join("<br>");
+      var bodyLines = s.body.map(function(line){ return cleanBody(escHtml(line)); }).filter(function(l){return l.length>0;});
+      var bodyHtml = "";
+      if(bodyLines.length > 0) {
+        // 첫 줄이 핵심 한줄 요약 (느낌표나 물음표로 끝나는 짧은 문장)
+        var firstLine = bodyLines[0];
+        if(firstLine.length < 60 && (firstLine.endsWith("!") || firstLine.endsWith("?"))) {
+          bodyHtml = "<div class=\"sec-oneliner\">"+firstLine+"</div>";
+          bodyHtml += bodyLines.slice(1).join("<br>");
+        } else {
+          bodyHtml = bodyLines.join("<br>");
+        }
+      }
       html += "<div class=\"section\"><div class=\"sec-title\">"+cleanTitle(escHtml(s.title))+"</div><div class=\"sec-body\">"+bodyHtml+"</div></div>";
     });
   } else {
