--- a/public/index.html
+++ b/public/index.html
@@ -52,14 +52,14 @@ select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/
 @keyframes fadeIn{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
 .res-hd{background:var(--red);padding:16px 20px;text-align:center;color:var(--paper);font-size:16px;font-weight:700;letter-spacing:2px;margin:-24px -20px 20px}
 .saju-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:8px;margin-bottom:16px}
-.sc{border-radius:6px;overflow:hidden;text-align:center;box-shadow:1px 2px 6px rgba(0,0,0,.15)}
-.sc-lbl{font-size:11px;color:#fff;font-family:"Gowun Dodum",sans-serif;padding:5px 4px 3px;background:rgba(0,0,0,.2);letter-spacing:1px}
-.sc-sky{font-size:32px;font-weight:800;color:#fff;line-height:1;padding:10px 4px 2px;text-shadow:1px 1px 3px rgba(0,0,0,.2)}
-.sc-sky-kr{font-size:11px;color:rgba(255,255,255,.8);padding-bottom:2px}
-.sc-divider{height:1px;background:rgba(255,255,255,.3);margin:0 10px}
-.sc-earth{font-size:32px;font-weight:800;line-height:1;padding:8px 4px 2px;text-shadow:1px 1px 3px rgba(0,0,0,.2)}
-.sc-earth-kr{font-size:11px;padding-bottom:4px;opacity:.85}
-.sc-sub{font-size:10px;color:rgba(255,255,255,.75);font-family:"Gowun Dodum",sans-serif;padding:2px 4px 6px;background:rgba(0,0,0,.1)}
+.sc{border-radius:6px;overflow:hidden;text-align:center;box-shadow:2px 3px 10px rgba(0,0,0,.35)}
+.sc-lbl{font-size:12px;color:#fff;font-family:"Gowun Dodum",sans-serif;padding:6px 4px 4px;background:rgba(0,0,0,.35);letter-spacing:2px;font-weight:700}
+.sc-sky{font-size:34px;font-weight:800;color:#fff;line-height:1;padding:12px 4px 2px;text-shadow:2px 2px 4px rgba(0,0,0,.4)}
+.sc-sky-kr{font-size:12px;color:rgba(255,255,255,.95);padding-bottom:2px;font-weight:700}
+.sc-divider{height:1px;background:rgba(255,255,255,.4);margin:0 8px}
+.sc-earth{font-size:34px;font-weight:800;line-height:1;padding:8px 4px 2px;text-shadow:2px 2px 4px rgba(0,0,0,.4)}
+.sc-earth-kr{font-size:12px;padding-bottom:4px;color:rgba(255,255,255,.95);font-weight:700}
+.sc-sub{font-size:11px;color:rgba(255,255,255,.95);font-family:"Gowun Dodum",sans-serif;padding:4px 4px 8px;background:rgba(0,0,0,.25);font-weight:600}
 .info-row{display:flex;flex-wrap:wrap;gap:8px;margin-bottom:16px;padding-bottom:16px;border-bottom:1px dashed rgba(107,58,31,.3)}
 .badge{background:rgba(255,255,255,.5);border:1px solid var(--smoke);border-radius:12px;padding:4px 10px;font-family:"Gowun Dodum",sans-serif;font-size:12px;color:var(--wood)}
 .badge.strong{background:rgba(192,57,43,.15);border-color:var(--red);color:var(--red);font-weight:700}
@@ -71,8 +71,8 @@ select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/
 .section{margin-bottom:18px;padding-bottom:18px;border-bottom:1px dashed rgba(107,58,31,.3)}
 .section:last-child{border-bottom:none;margin-bottom:0;padding-bottom:0}
 .sec-title{font-size:17px;font-weight:700;color:var(--red);margin-bottom:12px}
-.sec-oneliner{font-family:"Nanum Myeongjo",serif;font-size:15px;font-weight:700;color:var(--wood);background:rgba(107,58,31,.08);border-left:3px solid var(--red);padding:8px 12px;margin-bottom:12px;border-radius:0 4px 4px 0;line-height:1.5}
-.sec-body{font-family:"Gowun Dodum",sans-serif;font-size:16px;color:#3a1a00;line-height:2.1}
+.sec-oneliner{font-family:"Nanum Myeongjo",serif;font-size:16px;font-weight:800;color:#6b1a0a;background:rgba(192,57,43,.1);border-left:4px solid var(--red);padding:10px 14px;margin-bottom:14px;border-radius:0 6px 6px 0;line-height:1.6}
+.sec-body{font-family:"Nanum Myeongjo",serif;font-size:15.5px;font-weight:400;color:#2c1500;line-height:2.2;letter-spacing:.2px}
 .footer{text-align:center;color:rgba(245,230,200,.3);font-family:"Gowun Dodum",sans-serif;font-size:11px;padding-bottom:20px}
 .yundal-row{display:none;margin-top:8px}
 .yundal-row.show{display:flex}
